# gyozas

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: concepts.md  getting-started.md  index.md  migrating-from-ecole.md
docs/api/: dynamics.md  environment.md  gymnasium-wrapper.md  informations.md  instances.md  modifiers.md  observations.md  rewards.md
docs/examples/: branching.md  node-selection.md
docs/stylesheets/: extra.css
gyozas/: __init__.py  _utils.py  branching_tree.py  environment.py  gymnasium_wrapper.py
gyozas/dynamics/: __init__.py  branching.py  configuring.py  dynamics.py  node_selection.py  primal_search.py  threaded_dynamics.py
gyozas/informations/: __init__.py  empty.py  time_since_last_step.py
gyozas/instances/: __init__.py  capacitated_facility_location.py  combinatorial_auction.py  files.py  independent_set.py  instance_generator.py  set_cover.py
gyozas/instances/modifiers/: __init__.py  embed_objective.py  set_parameters.py
gyozas/observations/: __init__.py  branching_tree.py  meta_observation.py  node_bipartite_ecole.py  node_bipartite_scip.py  pseudo_cost.py  strong_branching_scores.py  structs.py
gyozas/rewards/: __init__.py  arithmetic.py  done.py  integral_bound.py  lp_iterations.py  nnodes.py  solving_time.py
tests/: instance.lp  test_branching_tree.py  test_embed_objective.py  test_env.py  test_environment_extended.py  test_gymnasium_wrapper.py  test_gymnasium_wrapper_extended.py  test_init.py  test_instances_extended.py  test_multi_episode.py  test_rewards.py
tests/dynamics/: test_branching.py  test_configuring.py  test_dynamics_base.py  test_node_selection.py  test_primal_search.py
tests/informations/: test_empty.py  test_time_since_last_step.py
tests/instances/: test_capacitated_facility_location.py  test_combinatorial_auction.py  test_file_generator.py  test_independent_set.py  test_set_cover.py
tests/observations/: test_branching_tree_obs.py  test_branching_tree_obs_extended.py  test_meta_observation.py  test_node_bipartite_ecole.py  test_node_bipartite_ecole_extended.py  test_node_bipartite_scip.py  test_pseudo_cost.py  test_strong_branching_scores.py
tests/rewards/: test_arithmetic.py  test_done.py  test_done_extended.py  test_integral_bound.py  test_integral_bound_extended.py  test_lp_iterations.py  test_nnodes.py  test_solving_time.py
